CelTagService.setTags (#96)